--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "formidable": "^3.5.4",
+    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
